module(
    name = "shell-encryption",
)

bazel_dep(name = "tink_cc", version = "2.4.0", repo_name = "com_github_tink_crypto_tink_cc")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "protobuf", version = "33.4")
archive_override(
    # Patches protobuf to make the Rust libraries visible. See
    # https://github.com/protocolbuffers/protobuf/issues/23866.
    module_name = "protobuf",
    integrity = "sha256-mvdpd/lyYjQXZikNZrDRgnMHibNK2A3YMQ8+omVYGVk=",
    strip_prefix = "protobuf-9ed3f7fb76c3aa2384b6bf3ef5f434896d3db5ab",
    urls = ["https://github.com/google/protobuf/archive/9ed3f7fb76c3aa2384b6bf3ef5f434896d3db5ab.zip"],
)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_github_google_googletest")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "boringssl", version = "0.20251002.0")
bazel_dep(name = "glog", version = "0.7.1.bcr.1", repo_name = "com_github_google_glog")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "highway", version = "1.3.0", repo_name = "com_github_google_highway")
